# duckdb-xml

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: copy_xlsx.cpp  xlsx_cell.cpp  xlsx_reader.cpp  xlsx_reader_0.cpp  xlsx_reader_1.cpp  xlsx_reader_2.cpp  xml_extension.cpp  xml_reader.cpp  zip_archive.cpp  zip_file.cpp
src/include/: xlsx_cell.hpp  xlsx_reader.hpp  xml_extension.hpp  xml_reader.hpp  xml_state_machine.hpp  zip_archive.hpp  zip_writer.hpp
test/nodejs/: xml_test.js
test/python/: xml_test.py
test/sql/xlsx/: basic_reading.test  basic_write.test  big_reading.test  collapsed_cells.test  two_sheets.test  types_roundtrip.test
test/sql/xlsx/data/: 2x3000.xlsx  apple_numbers.xlsx  collapsed_cells.xlsx  collapsed_cells_jagged.xlsx  google_sheets.xlsx  single_column.xlsx  sparse.xlsx  two_sheets.xlsx
test/sql/xlsx/data/unpacked/collapsed_cells/: sharedStrings.xml  sheet1.xml  sheet2.xml
test/sql/xlsx/data/unpacked/two_sheets/: sharedStrings.xml  sheet1.xml  sheet2.xml
test/sql/xml/data/: child_elements.xml  field_attributes.xml  row_attributes.xml
